<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Email</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="preferences_category_title_general">General</string>
    <string name="preferences_category_title_appearance">Appearance</string>
    <string name="preference_list_title_refresh_rate">Refresh rate</string>
    <string name="preference_list_title_sort_by_date">Sort by date</string>
    <string name="preference_checkbox_dark">Dark Mode</string>
    <string name="folder_name_label">Folder name</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="login">Log In</string>
    <string name="settings">Settings</string>
    <string name="folder">Folder</string>
    <string name="folders">Folders</string>
    <string name="activities">Activities</string>
    <string name="create_folder">Create folder</string>
    <string name="email">Email</string>
    <string name="emails">Emails</string>
    <string name="contact">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="create_email">Create email</string>
    <string name="create_contact">New contact</string>
    <string name="contact_save">Save</string>
    <string name="contact_first">First name</string>
    <string name="contact_last">Last name</string>
    <string name="contact_email">Email</string>
    <string name="email_back">Back</string>
    <string name="email_forward">Forward</string>
    <string name="email_delete">Delete</string>
    <string name="email_reply">Reply</string>
    <string name="email_reply_to_all">Reply to all</string>
    <string name="email_content">Sadrzaj emaila</string>
    <string name="email_send">Send</string>
    <string name="email_cancel">Cancel</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose your email...</string>
    <string name="compose">Compose</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="folder_name">Folder name</string>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="from">From</string>
    <string name="attachment">Attachment</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="date">Date</string>
    <string name="protocol">Protocol</string>
    <string name="pop3">POP3</string>
    <string name="imap">IMAP</string>
    <string name="toCreateFolder">If (choose which part of email below)</string>
    <string name="containsCreateFolder">Contains: </string>
    <string name="wordCreateFolder">enter a word </string>
    <string name="search">Search</string>
    <string-array name="operation">
        <item>MOVE</item>
        <item>COPY</item>
        <item>DELETE</item>
    </string-array>
    <string-array name="condition">
        <item>TO</item>
        <item>FROM</item>
        <item>CC</item>
        <item>SUBJECT</item>
    </string-array>
</resources>
