<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emails"

            android:checkable="true"
            android:icon="@drawable/ic_email_"
            android:title="@string/emails" />

        <item android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contact_"
            android:title="@string/contacts"/>

        <item android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder"
            android:title="@string/folders"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_"
            android:title="@string/settings"/>

    </group>

</menu>