<?xml version="1.0" encoding="utf-8" ?>
<!--TODO: Preference screen

    Preference category - checkbox
    List preference - lista opcija
    entries - lista elementa za prikaz(1 min)
    entryValues - sta ce biti upisano u bazu kad korisnik izabere(1)
    addPreferenceFromResurce - setContenetview za preference
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preferences_category_title_general">

        <ListPreference
            android:summary="%s"
            android:entries="@array/refresh_list_entries"
            android:entryValues="@array/refresh_list_values"
            android:key="refresh_rate"
            android:title="@string/preference_list_title_refresh_rate" />

        <ListPreference
            android:defaultValue="0"
            android:summary="%s"
            android:entries="@array/sort_by_date_entries"
            android:entryValues="@array/sort_by_date_values"
            android:key="sort_by_date"
            android:title="@string/preference_list_title_sort_by_date" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_category_title_appearance">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="dark_mode"
            android:title="@string/preference_checkbox_dark"/>
    </PreferenceCategory>

</PreferenceScreen>