<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnDeleteEmail"
        android:orderInCategory="200"
        android:icon="@drawable/icon_delete"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/btnEmailForward"
        android:orderInCategory="100"
        android:icon="@drawable/icon_forward"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/btnOptionReply"
        android:orderInCategory="1"
        android:title="@string/email_reply"
        app:showAsAction="never" />

    <item
        android:id="@+id/btnOptionsToAll"
        android:orderInCategory="1"
        android:title="@string/email_reply_to_all"
        app:showAsAction="never" />

</menu>