<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:padding="10dp">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_contact_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textAlignment="textStart"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="4dp"
        app:layout_constraintStart_toStartOf="parent"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_new_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="@color/colorTxt"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imgContact"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_contact_activity"
        android:background="@color/colorAccent" />
    <TextView
        android:id="@+id/textViewFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_first"
        app:layout_constraintTop_toBottomOf="@id/imgContact"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="10pt"/>
    <TextView
        android:id="@+id/textViewLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_last"
        app:layout_constraintTop_toBottomOf="@id/txtFirst"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="3pt"/>
    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_email"
        app:layout_constraintTop_toBottomOf="@id/txtLast"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="3pt"/>

    <EditText
        android:id="@+id/txtFirst"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFirst"
        android:textColor="@color/colorTxt"
        android:textColorHint="@color/colorTxt"
        android:textSize="8pt"
        />

    <EditText
        android:id="@+id/txtLast"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLast"
        android:textColor="@color/colorTxt"
        android:textColorHint="@color/colorTxt"
        android:textSize="8pt"/>

    <EditText
        android:id="@+id/txtEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTxt"
        android:textColorHint="@color/colorTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail"
        android:textSize="8pt"/>



    <TextView
        android:id="@+id/txt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="18pt"/>
    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintTop_toBottomOf="@id/txt0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="3pt"/>

    <ListView
        android:id="@+id/listView_contact_messagesTo"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintTop_toBottomOf="@id/listView_contact_messagesTo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="3pt"/>

    <ListView
        android:id="@+id/listView_contact_messagesFrom"
        app:layout_constraintTop_toBottomOf="@id/txt2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cc"
        app:layout_constraintTop_toBottomOf="@id/listView_contact_messagesFrom"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="3pt"/>

    <ListView
        android:id="@+id/listView_contact_messagesCc"
        app:layout_constraintTop_toBottomOf="@id/txt3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bcc"
        app:layout_constraintTop_toBottomOf="@id/listView_contact_messagesCc"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="3pt"/>

    <ListView
        android:id="@+id/listView_contact_messagesBcc"
        app:layout_constraintTop_toBottomOf="@id/txt4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>