<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEmailActivity"
    android:padding="10dp">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_create_email_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/to_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_create_email_activity"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/to"
            />

        <MultiAutoCompleteTextView
            android:id="@+id/autocomplete_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cc_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/to_field_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/cc"
            />

        <MultiAutoCompleteTextView
            android:id="@+id/autocomplete_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bcc_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cc_field_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/bcc"
            />

        <MultiAutoCompleteTextView
            android:id="@+id/autocomplete_bcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/bcc_field_layout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/subject"
            android:gravity="center" />

        <EditText
            android:id="@+id/txt_email_subject_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:inputType="text"
            android:paddingTop="11pt"
            android:textSize="8pt"
            />

    </LinearLayout>




    <EditText
        android:id="@+id/txt_email_content_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/layout_subject"
        android:gravity="top|left"
        android:hint="@string/compose_email"
        android:lines="15"
        android:background="@android:color/transparent"
        android:scrollbars="vertical"
        android:textSize="8pt"
        android:paddingTop="11pt"
        android:layout_marginTop="3pt"
        android:layout_marginEnd="10pt"
        android:layout_marginStart="5pt"/>




</android.support.constraint.ConstraintLayout>