<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="50dp">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:textAlignment="textStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="200dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="18dp" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:hint="@string/username"
        android:id="@+id/txtUsername"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:textSize="8pt"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:hint="@string/password"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtUsername"
        android:textSize="8pt"
        />
    <Button
        android:id="@+id/btnEmails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBtn"
        android:textColor="@color/colorTxt"
        android:textSize="10pt"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        android:layout_marginTop="30dp"/>
</android.support.constraint.ConstraintLayout>