<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FolderActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_folder_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp">

        <TextView
            android:id="@+id/toolbar_folder_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/folder"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="18dp" />



    </android.support.v7.widget.Toolbar>



        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/toolbar_folder_activity"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/folders"/>

            <ListView

                android:id="@+id/folder_list_view_folders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></ListView>


            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emails"/>

            <ListView

                android:id="@+id/folder_list_view_emails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></ListView>
        </LinearLayout>






</android.support.constraint.ConstraintLayout>